--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "educom-sms",
-  "version": "1.0.0",
-  "description": "send educom web-sms via nodejs api",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "send educom or xoxo web-sms via nodejs api",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsup src/index.ts"
+  },
   "dependencies": {
-    "puppeteer": "^1.15.0"
+    "puppeteer": "^18.0.5"
   },
   "files": [
-    "index.js"
+    "lib/index.js"
   ],
   "repository": {
     "type": "git",
@@ -19,15 +23,18 @@
   "homepage": "https://github.com/mklan/educom-sms#readme",
   "keywords": [
     "sms",
+    "xoxo",
     "educom",
     "text",
     "api"
   ],
-  "author": "Matthias Klan <matthias.klan@gmail.com>",
-  "license": "ISC",
+  "author": "Matthias Klan",
+  "license": "MIT",
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint-plugin-import": "^2.17.2",
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.3"
   }
 }
